# nanny_description

./: CMakeLists.txt  README.md  package.xml
meshes/: back_left_swivel.STL  base_link.stl  battery_v1_1.stl  bracket_v1_1.stl  bracket_v1__1__1.stl  castor_v1_1.stl  extrude2_2.stl  extrude2_4.stl  extrude3_3.stl  extrude3_4.stl  extrude3_5.stl  extrude3_6.stl  extrude3__1__1.stl  extrude3__1__4.stl  extrude3__1__6.stl  extrude_1.stl  extrude_3.stl  front_laser.STL  front_laser_link.STL  front_right_caster.STL  left_caster.STL  left_caster_swivel.STL  left_caster_wheel.STL  left_swivel.STL  left_wheel.STL  motor_v1__1__1.stl  rear_laser.STL  rear_laser_link.STL  right_caster.STL  right_caster_swivel.STL  right_caster_wheel.STL  right_swivel.STL  right_wheel.STL  universalplate_v1_1.stl  universalplate_v1__1__1.stl  universalplate_v1__2__1.stl  universalplate_v1__3__1.stl  wheel_v1_1.stl  wheel_v1__1__1.stl
nanny_description/: package.xml
nanny_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  ps4joy.launch  ps4joy.yaml  teleop_twist.launch
nanny_description/meshes/: castor_v1__1__1.stl  castorconnect_v1_1.stl  castorconnect_v1__1__1.stl  extrude2_1.stl  extrude2_3.stl  extrude2_5.stl  extrude2_6.stl  extrude3_1.stl  extrude3_2.stl  extrude3__1__2.stl  extrude3__1__3.stl  extrude3__1__5.stl  extrude_2.stl  (+3 more)
teleop_twist_keyboard/: CMakeLists.txt  package.xml  setup.py
testcan/: nanny.eds
urdf/: Coach_Nanny_Butler.urdf  _d435.urdf.xacro  coach_nanny.xacro  coach_nanny_robot.urdf  covid_killer_robot.urdf  nanny.trans  nanny.xacro
(+3 files in other folders)
