<?xml version="1.0"?>
<package format="2">
  <name>nanny_description</name>
  <version>0.0.0</version>
<description>The nanny_description package</description>

  <maintainer email="mail@mail.com">XPX Innovation Labs</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
